--- a/vote/public/css/main.css
+++ b/vote/public/css/main.css
@@ -55,12 +55,11 @@ footer {
     transform: translateX(-50%);
     color: #37474f;
 
-    /* uncomment below to create feature-one */
+    /* for feature-one */
     color: rgb(50, 12, 238);
     background-color: #eceff1;
     border: rgb(236, 107, 15) 1px solid;
     padding: .7em;
-
 }
 
 :focus {
