--- a/vote/public/css/main.css
+++ b/vote/public/css/main.css
@@ -55,11 +55,13 @@ footer {
     transform: translateX(-50%);
     color: #37474f;
 
-    /* for feature-one */
+    /* uncomment below to create feature-one */
+/*    
     color: rgb(50, 12, 238);
     background-color: #eceff1;
     border: rgb(236, 107, 15) 1px solid;
     padding: .7em;
+*/
 }
 
 :focus {
