--- a/vote/public/css/main.css
+++ b/vote/public/css/main.css
@@ -56,7 +56,7 @@ footer {
     color: #37474f;
 
     /* uncomment below to create feature-one */
-    
+/*    
     color: rgb(50, 12, 238);
     background-color: #eceff1;
     border: rgb(236, 107, 15) 1px solid;
